force-app/main/default/objects/LB_Order_Time__c/LB_Order_Time__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>LB Order Time</label>
</CustomObject>