force-app/main/default/objects/LB_Order_Time__c/fields/LunchEndTime__c.field-meta.xml
<CustomField>
    <fullName>LunchEndTime__c</fullName>
    <label>LunchEndTime</label>
    <length>18</length>
    <type>Text</type>
</CustomField>