force-app/main/default/objects/LB_Order_Time__c/fields/LunchStartTime__c.field-meta.xml
<CustomField>
    <fullName>LunchStartTime__c</fullName>
    <label>LunchStartTime</label>
    <length>18</length>
    <type>Text</type>
</CustomField>