force-app/main/default/objects/LB_Order_Time__c/fields/PreBookingEndTime__c.field-meta.xml
<CustomField>
    <fullName>PreBookingEndTime__c</fullName>
    <label>PreBookingEndTime</label>
    <length>18</length>
    <type>Text</type>
</CustomField>