force-app/main/default/objects/LB_Order_Time__c/fields/SpotBookEndTime__c.field-meta.xml
<CustomField>
    <fullName>SpotBookEndTime__c</fullName>
    <label>SpotBookEndTime</label>
    <length>18</length>
    <type>Text</type>
</CustomField>