force-app/main/default/objects/LB_Order_Time__c/fields/SpotBookStartTime__c.field-meta.xml
<CustomField>
    <fullName>SpotBookStartTime__c</fullName>
    <label>SpotBookStartTime</label>
    <length>18</length>
    <type>Text</type>
</CustomField>